config_migration_backup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daytrade-service
spec:
  selector:
    app: daytrade
  ports:
  - port: 80
    targetPort: 443
  type: LoadBalancer
