config_migration_backup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: day-trade-personal-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: daytrade.vercel.example.com
    http:
      paths:
      - backend:
          service:
            name: day-trade-personal-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - daytrade.vercel.example.com
    secretName: day-trade-personal-tls
